--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,10 +226,12 @@ label {
   margin-bottom: 30px;
 }
 
-#form_content {
+#form_content,
+.fr-box {
   width: 100%;
   height: 220px;
   border-radius: 10px;
+  overflow: scroll;
 }
 
 .card {
@@ -286,4 +288,16 @@ label {
 .block-image {
   height: 205px !important;
   overflow: hidden !important;
+}
+
+#form_role {
+  display: flex;
+  width: 30%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+#form_role label {
+  display: inherit;
 }
