--- a/templates/User/sing-up.html.twig
+++ b/templates/User/sing-up.html.twig
@@ -6,17 +6,17 @@
 
 {% if is_granted('ROLE_ADMIN') %}
 
-   <h1>Inscription</h1>
+   <h2>Inscription</h2>
     {{ form_start(formAddUser) }}
 
-    {{ form_row(formAddUser.name, {'attr': {'placeholder': 'Votre nom'}}) }}
+    {{ form_row(formAddUser.name, {'attr': {'placeholder': 'Nom'}}) }}
 
-    {{ form_row(formAddUser.mdp, {'attr': {'placeholder': 'Choisir un mot de passe'}}) }}
+    {{ form_row(formAddUser.mdp, {'attr': {'placeholder': 'Mot de passe'}}) }}
 
-    {{ form_row(formAddUser.email, {'attr': {'placeholder': 'Votre email'}}) }}
+    {{ form_row(formAddUser.email, {'attr': {'placeholder': 'Email'}}) }}
 
     <button type="submit" class="btn btn-success">
-        S'inscrire</button>
+        Inscrire</button>
 
     {{ form_end(formAddUser) }}
 
