error delete comment form article

--- a/templates/dashboard/view-article.html.twig
+++ b/templates/dashboard/view-article.html.twig
@@ -1,66 +1,58 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-  Liste des produits
+    Liste des produits
 {% endblock %}
 
 {% block body %}
-  <main>
-    <section class="view-article">
-      <img src="{{ asset('img/bandeau.svg') }}" alt="bandeau" />
-      <div class="card-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              {% if app.user %}
-                {% if is_granted('ROLE_BO') %}
-                  <a href="{{
-                    path(
-                      'modified-article',
-                      {
-                        id: article.id
-                      }
-                    )
-                    }}"
-                    class="btn btn-primary lien">
-                    Modifier l'article
-                  </a>
-                {% endif %}
-              {% else %}
+    <main>
+        <section class="view-article">
+            <img src="{{ asset('img/bandeau.svg') }}" alt="bandeau"/>
+            <div class="card-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            {% if app.user %}
+                                {% if is_granted('ROLE_BO') %}
+                                    <a href="{{ path('modified-article', {id: article.id})}}"
+                                        class="btn btn-primary lien">
+                                        Modifier l'article
+                                    </a>
+                                {% endif %}
+                            {% else %}
 
-              {% endif %}
-              <div class="img-article">
-                <h2 class="card-title">
-                  {{ article.title }}
-                </h2>
-                <div class="image">
-                  <img src="{{ article.image }}"
-                    class="card-img-top"
-                    alt="..." />
+                            {% endif %}
+                            <div class="img-article">
+                                <h2 class="card-title">
+                                    {{ article.title }}
+                                </h2>
+                                <div class="image">
+                                    <img src="{{ article.image }}" class="card-img-top" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="card card-descript">
+                                <div class="card-body">
+                                    <p class="">
+                                        {{ article.content }}.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
+        </section>
 
+        <div class="row mt-2">
             <div class="col-md-12">
-              <div class="card card-descript">
-                <div class="card-body">
-                  <p class="">
-                    {{ article.content }}.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="row mt-2">
-      <div class="col-md-12">
-        <h3>
-          Commentaires :
-        </h3>
-        <a href="{{
+                <h3>
+                    Commentaires :
+                </h3>
+                <a
+                    href="{{
           path(
             'create-comment-article',
             {
@@ -68,19 +60,33 @@
             }
           )
           }}">
-          Ajouter un commentaire
-        </a>
-      </div>
-
-      {% for comment in article.comments %}
-        <div class="col-md-12 mt-2">
-          <div class="card comment">
-            <div class="card-body comment">
-              {{ comment.content }}
+                    Ajouter un commentaire
+                </a>
             </div>
-          </div>
+  
+
+
+        {% for comment in article.comments %}
+            <div class="col-md-12 mt-2">
+                <div class="card comment">
+                    
+                        {% if is_granted('ROLE_MODERATOR') %}
+                            <div>
+                                <a href="{{
+              path('delete-commit-article',{id: article.id})}}">
+                                    <i class="fas fa-trash-alt"></i>
+                                </a>
+                            {% else %}
+                            {% endif %}
+                        </div>
+
+                        <div class="card-body comment">
+                            {{ comment.content }}
+                        </div>
+
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-      {% endfor %}
-    </div>
-  </main>
+    </main>
 {% endblock %}
